@startuml

class Pixel {
    - int color
    + setColor(int color)
    + getColor(): int
}

class Frame {
    - Pixel[][] pixels
    - int width
    - int height
    + Frame(int width, int height)
    + establecerPixel(int x, int y, int color)
    + getPixel(int x, int y): Pixel
    + limpiarFrame()
}

class Buffer {
    - List<Frame> frames
    - int currentIndex
    + Buffer(int width, int height)
    + getCurrentFrame(): Frame
    + toggleFrame()
}

class Manager {
    - Buffer buffer
    + Manager(Buffer buffer)
    + establecerPixel(int x, int y, int color)
}

class Node {
    - Manager manager
    + Node(Manager manager)
    + actualizarPixel(int x, int y, int color)
}

class Renderer {
    - Buffer buffer
    + Renderer(Buffer buffer)
    + renderizar()
}

class Demo {
    + main(String[] args)
}

Frame --> Pixel: "Contiene"
Buffer --> Frame: "Contiene"
Manager --> Buffer: "Utiliza"
Node --> Manager: "Utiliza"
Renderer --> Buffer: "Utiliza"
Demo --> Buffer: "Crea instancia"
Demo --> Manager: "Crea instancia"
Demo --> Node: "Crea instancia"
Demo --> Renderer: "Crea instancia"

@enduml
